[gd_scene load_steps=20 format=3 uid="uid://c0lp3hietoj8q"]

[ext_resource type="PackedScene" uid="uid://0nh6b3o4n81h" path="res://Screens/GameScreen/Tabs/Combat/Map/combat_map_template.tscn" id="1_cipg0"]
[ext_resource type="Script" uid="uid://b80k75urtk45j" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/floor_1.gd" id="2_so1rx"]
[ext_resource type="PackedScene" uid="uid://cscllstepqabg" path="res://Screens/GameScreen/Tabs/Combat/Map/connection.tscn" id="3_3fnip"]
[ext_resource type="PackedScene" uid="uid://daiow51un2iat" path="res://Screens/GameScreen/Tabs/Combat/Map/room.tscn" id="4_45wrc"]
[ext_resource type="Resource" uid="uid://dcps2dq3hynnu" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row1_main.tres" id="5_8pkv3"]
[ext_resource type="Resource" uid="uid://ck7tjiksd525s" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row1_left1.tres" id="6_w3nds"]
[ext_resource type="Resource" uid="uid://c13ltjxyrjmpv" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row1_right1.tres" id="7_jp3nc"]
[ext_resource type="Resource" uid="uid://bes5wng58858o" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row1_right2.tres" id="8_k1uiv"]
[ext_resource type="Resource" uid="uid://cl64av53fkt61" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row2_main.tres" id="9_llyw4"]
[ext_resource type="Resource" uid="uid://c04cn5eeaqtub" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/training_room.tres" id="10_so1rx"]
[ext_resource type="Resource" uid="uid://bded4s0xlqjmh" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/emptyEncounter.tres" id="10_x6q06"]
[ext_resource type="Resource" uid="uid://xjsch3vcuvom" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row2_L2.tres" id="11_mur0i"]
[ext_resource type="Resource" uid="uid://dongx2d27b60x" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row2_R1.tres" id="12_vcrfi"]
[ext_resource type="Resource" uid="uid://dmphu3ohflj1l" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row2_R2.tres" id="13_817gc"]
[ext_resource type="Resource" uid="uid://ccrw60m5kmyus" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row3_main.tres" id="14_u4a2k"]
[ext_resource type="Resource" uid="uid://ncs3m0qwewxd" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row3_L2.tres" id="15_g178n"]
[ext_resource type="Resource" uid="uid://c3cenp04vfxsh" path="res://Graphic Elements/Shop/Shops/crow_nest.tres" id="16_3fnip"]
[ext_resource type="Resource" uid="uid://cmofeon1esm8l" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/row3_R1.tres" id="16_ujiqy"]
[ext_resource type="Resource" uid="uid://crjnofk8mjhk6" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor1/boss.tres" id="17_vt8a7"]

[node name="Floor1" instance=ExtResource("1_cipg0")]
script = ExtResource("2_so1rx")

[node name="Connection2" parent="CombatMap/ConnectionContainer" index="0" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
visible = true
points = PackedVector2Array(1920, 2073.5, 1620, 2073.5)
default_color = Color(0.31, 0.31, 0.31, 1)
Room1 = NodePath("../../RoomContainer/N1")
Room2 = NodePath("../../RoomContainer/N1L1")
visibilityOnStartup = 1

[node name="Connection3" parent="CombatMap/ConnectionContainer" index="1" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
visible = true
points = PackedVector2Array(1920, 2073.5, 2220, 2073.5)
default_color = Color(0.31, 0.31, 0.31, 1)
Room1 = NodePath("../../RoomContainer/N1")
Room2 = NodePath("../../RoomContainer/N1R1")
visibilityOnStartup = 1

[node name="Connection4" parent="CombatMap/ConnectionContainer" index="2" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(2220, 2073.5, 2520, 2073.5)
Room1 = NodePath("../../RoomContainer/N1R1")
Room2 = NodePath("../../RoomContainer/N1R2")

[node name="Connection" parent="CombatMap/ConnectionContainer" index="3" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
visible = true
points = PackedVector2Array(1920, 2073.5, 1920, 1873.5)
default_color = Color(0.31, 0.31, 0.31, 1)
Room1 = NodePath("../../RoomContainer/N1")
Room2 = NodePath("../../RoomContainer/N2")
visibilityOnStartup = 1

[node name="Connection5" parent="CombatMap/ConnectionContainer" index="4" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1920, 1873.5, 1620, 1873.5)
Room1 = NodePath("../../RoomContainer/N2")
Room2 = NodePath("../../RoomContainer/N2L1")

[node name="Connection6" parent="CombatMap/ConnectionContainer" index="5" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1620, 1873.5, 1320, 1873.5)
Room1 = NodePath("../../RoomContainer/N2L1")
Room2 = NodePath("../../RoomContainer/N2L2")

[node name="Connection7" parent="CombatMap/ConnectionContainer" index="6" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1920, 1873.5, 2220, 1873.5)
Room1 = NodePath("../../RoomContainer/N2")
Room2 = NodePath("../../RoomContainer/N2R1")

[node name="Connection8" parent="CombatMap/ConnectionContainer" index="7" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(2220, 1873.5, 2520, 1873.5)
Room1 = NodePath("../../RoomContainer/N2R1")
Room2 = NodePath("../../RoomContainer/N2R2")

[node name="Connection9" parent="CombatMap/ConnectionContainer" index="8" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1920, 1873.5, 1920, 1673.5)
Room1 = NodePath("../../RoomContainer/N2")
Room2 = NodePath("../../RoomContainer/N3")

[node name="Connection10" parent="CombatMap/ConnectionContainer" index="9" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1920, 1673.5, 1620, 1673.5)
Room1 = NodePath("../../RoomContainer/N3")
Room2 = NodePath("../../RoomContainer/N3_L1")

[node name="Connection11" parent="CombatMap/ConnectionContainer" index="10" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1620, 1673.5, 1320, 1673.5)
Room1 = NodePath("../../RoomContainer/N3_L1")
Room2 = NodePath("../../RoomContainer/N3_L2")

[node name="Connection12" parent="CombatMap/ConnectionContainer" index="11" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1920, 1673.5, 2220, 1673.5)
Room1 = NodePath("../../RoomContainer/N3")
Room2 = NodePath("../../RoomContainer/N3_R1")

[node name="Connection13" parent="CombatMap/ConnectionContainer" index="12" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("3_3fnip")]
points = PackedVector2Array(1920, 1673.5, 1920, 1373.5)
Room1 = NodePath("../../RoomContainer/N3")
Room2 = NodePath("../../RoomContainer/N4")

[node name="N1" parent="CombatMap/RoomContainer" index="0" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("5_8pkv3")
visibilityOnStartup = 2

[node name="N1L1" parent="CombatMap/RoomContainer" index="1" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_right = -300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("6_w3nds")
visibilityOnStartup = 1

[node name="N1R1" parent="CombatMap/RoomContainer" index="2" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 300.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("7_jp3nc")
visibilityOnStartup = 1

[node name="N1R2" parent="CombatMap/RoomContainer" index="3" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 600.0
offset_right = 600.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("8_k1uiv")

[node name="N2" parent="CombatMap/RoomContainer" index="4" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("9_llyw4")
visibilityOnStartup = 1

[node name="N2L1" parent="CombatMap/RoomContainer" index="5" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_right = -300.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("10_so1rx")
nameWhenCompleted = "Training dummy"
isEvent = true

[node name="N2L2" parent="CombatMap/RoomContainer" index="6" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_right = -600.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("11_mur0i")

[node name="N2R1" parent="CombatMap/RoomContainer" index="7" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 300.0
offset_right = 300.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("12_vcrfi")

[node name="N2R2" parent="CombatMap/RoomContainer" index="8" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 600.0
offset_right = 600.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("13_817gc")

[node name="N3" parent="CombatMap/RoomContainer" index="9" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("14_u4a2k")

[node name="N3_L1" parent="CombatMap/RoomContainer" index="10" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_right = -300.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 0
text = "Crow's Nest"
encounter = ExtResource("10_x6q06")
nameWhenUnexplored = "Crow's Nest"
nameWhenCompleted = "Crow's Nest"
isShop = true
shopDetails = ExtResource("16_3fnip")

[node name="N3_L2" parent="CombatMap/RoomContainer" index="11" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_right = -600.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("15_g178n")

[node name="N3_R1" parent="CombatMap/RoomContainer" index="12" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 300.0
offset_right = 300.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("16_ujiqy")

[node name="N4" parent="CombatMap/RoomContainer" index="13" instance=ExtResource("4_45wrc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 0
encounter = ExtResource("17_vt8a7")

[editable path="HBoxContainer/HomeButton"]
[editable path="HBoxContainer/HomeButton/HBoxContainer/Sprite"]
